Diet Planner Based On BMI

--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
         <div id="dietPlan"></div>
         <br><br>
         <button  id="downloadPdf" type="button" style="display: none;" onclick="generatePDF()">Download PDF</button>
-        <script src="assets/diet_planner.js"></script>
+        <script src="diet_planner.js"></script>
       </section>
     
                 <h2>Introduction to the body mass index (BMI)</h2>
